--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <title>First Version</title>
+    <title>Second Version</title>
   </head>
   <body>
     <h1>
-      First Version
+      Second Version
     </h1>
   </body>
 </html>
