Вставка видео в нужное место

--- a/index.html
+++ b/index.html
@@ -326,7 +326,6 @@
 			target="_blank">
 			<img src="images/outlogo/tamby.png">
 		</a>
-		<iframe width="300" height="200" src="https://www.youtube.com/embed/n_nD7EeA1Wc" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</p>
 </div>
 			</div>
@@ -410,6 +409,7 @@
 					src="images/photo/tutor.jpg" 
 					title="Занятия по математике в группах">
 			</div>
+			<center><iframe width="620" height="270" src="https://www.youtube.com/embed/n_nD7EeA1Wc" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 			<h2 class="main"> 
 				<span class="h21">Основные направления деятельности:</span>
 			</h2>
