M-42. Fixed two errors of css classes

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 			{
 			.tableContainer {
 				display:table;table-layout:fixed;width:100%
-			}.
-			tableRow {
+			}
+			.tableRow {
 				display:table-row
-			}.
-			tableCell {
+			}
+			.tableCell {
 				display:table-cell;width:2px
 			}
 			p.inTableCell {
