--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 	<body link="#000066">
 		<div class="container">
 			<div class="g1">
-				<img src="images/background/logo.png">
+				<img src="images/background/logo.png"
+				 	alt="tech">
 			</div>
 			<div class="g2">
 			<h1>Репетитор по математике в Минске</h1>
@@ -122,7 +123,8 @@
 			</span>
 			</div>
 			<div class="g3">
-				<img src="images/cat/1.png">
+				<img src="images/cat/1.png"
+					alt="tech">
 			</div>
 			<div class="clear">
 			</div>
@@ -160,11 +162,14 @@
 			</div>
 			<div class="fon">
 				<div class="foncall">
-					<img src="./images/advantages/mts.png">
+					<img src="./images/advantages/mts.png"
+					 	alt="tech">
 						<a href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velcom.jpg">
+					<img src="./images/advantages/velcom.jpg"
+					 	alt="tech">
 						<a href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/vib.png">
+					<img src="./images/advantages/vib.png"
+					 	alt="tech">
 						<a href="tel:+375172400021">+375(17)240-00-21</a>
 				</div>
 				<div class="otz">
@@ -174,7 +179,8 @@
 					<div class="ot0">
 						<div class="ot1">
 							<a href="otzivi.html#denis">
-								<img src="./images/advantages/1-62.png">
+								<img src="./images/advantages/1-62.png"
+									alt="tech">
 							</a>
 						</div>
 						<div class="ot2">
@@ -197,7 +203,8 @@
 						<div class="ot0">
 							<div class="ot1">
 								<a href="otzivi.html#kalenik">
-									<img src="./images/advantages/1-63.png">
+									<img src="./images/advantages/1-63.png"
+										alt="tech">
 								</a>
 							</div>
 							<div class="ot2">
@@ -222,7 +229,8 @@
 						<div class="ot0">
 							<div class="ot1">
 							<a href="otzivi.html#filimonova">
-								<img src="./images/advantages/1-66.png">
+								<img src="./images/advantages/1-66.png"
+									alt="tech">
 							</a>
 							</div>
 							<div class="ot2">
@@ -246,7 +254,8 @@
 						<div class="ot0">
 							<div class="ot1">
 								<a href="otzivi.html#vasil">
-									<img src="./images/advantages/1-64.png">
+									<img src="./images/advantages/1-64.png"
+										alt="tech">
 								</a>
 							</div>
 							<div class="ot2">
@@ -269,7 +278,8 @@
 						<div class="ot0">
 							<div class="ot1">
 								<a href="otzivi.html#simb">
-									<img src="./images/advantages/1-65.png">
+									<img src="./images/advantages/1-65.png"
+										alt="tech">
 								</a>
 							</div>
 							<div class="ot2">
@@ -312,7 +322,8 @@
 		<a class="imagelink" 
 			href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
 			target="_blank">
-			<img src="images/outlogo/google.png">
+			<img src="images/outlogo/google.png"
+				alt="tech">
 		</a>
 	</p>
 	<p>
@@ -324,7 +335,8 @@
 		<a class="imagelink"
 			href="https://mathematics-by.tam.by/otzyvy/" 
 			target="_blank">
-			<img src="images/outlogo/tamby.png">
+			<img src="images/outlogo/tamby.png"
+				alt="tech">
 		</a>
 	</p>
 </div>
@@ -332,42 +344,54 @@
 		</div>
 		<div class="righten">
 			<div class="n1">
-				<img src="./images/cat/0.png">
+				<img src="./images/cat/0.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/2.png">
+				<img src="./images/cat/2.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/0.png">
+				<img src="./images/cat/0.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/3.png">
+				<img src="./images/cat/3.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/0.png">
+				<img src="./images/cat/0.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/4.png">
+				<img src="./images/cat/4.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/0.png">
+				<img src="./images/cat/0.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/5.png">
+				<img src="./images/cat/5.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/0.png">
+				<img src="./images/cat/0.png"
+					alt="tech">
 			</div>
 			<div class="n1">
-				<img src="./images/cat/6.png">
+				<img src="./images/cat/6.png"
+					alt="tech">
 			</div>
 			<div class="m_vbig">
 				<div class="n1">
-					<img src="./images/cat/0.png">
+					<img src="./images/cat/0.png"
+						alt="tech">
 				</div>
 			</div>
 			<div class="n1">
-				<img src="./images/gif1.gif">
+				<img src="./images/gif1.gif"
+					alt="tech">
 			</div>
 		</div>
 		
@@ -437,6 +461,7 @@
 					большое количество времени будет отведено на самостоятельную работу. Никто не будет «тянуть за уши»,
 					ведь высшее образование не является обязательным 
 						<img src="./images/advantages/smile.png" 
+							alt="tech"
 							style="vertical-align: middle; width: 30px;"> 
 					Пересдача и отчисление – это новые неприятные, но, тем не менее, реальные вещи. Не стоит до этого доводить.
 					</span>
@@ -527,7 +552,8 @@
 						%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda
 						05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1" 
 						target="_blank">
-							<img src="images/outlogo/google.png">
+							<img src="images/outlogo/google.png"
+								alt="tech">
 					</a>
 				</p>
 			</div>
@@ -535,7 +561,8 @@
 			</div>
 			<div class="bl">
 				<div class="bl1">
-					<img src="./images/advantages/a1_professionalism.png">
+					<img src="./images/advantages/a1_professionalism.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 						Профессионализм
@@ -544,18 +571,22 @@
 						Как правило, подавляющее большинство репетиторов считают себя профессионалами, поэтому выделю некоторые особенности:
 				</div>
 				<div class="strek0">
-					<img src="./images/advantages/3535-30.png">
+					<img src="./images/advantages/3535-30.png"
+						alt="tech">
 				</div>
 				<div class="strek1">
-					<img src="./images/advantages/3535-29.png">
+					<img src="./images/advantages/3535-29.png"
+						alt="tech">
 				</div>
 				<div class="strek2">
-					<img src="./images/advantages/3535-31.png">
+					<img src="./images/advantages/3535-31.png"
+						alt="tech">
 				</div>
 				<div class="bl1">
 					<div class="clear">
 					</div>
-					<img src="./images/advantages/a4_technologies.png">
+					<img src="./images/advantages/a4_technologies.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 						Сочетание различных подходов,технологий и экспромта
@@ -571,7 +602,8 @@
 						хорошему результату.
 				</div>
 				<div class="bl1">
-					<img src="./images/advantages/a7_cabinet.png">
+					<img src="./images/advantages/a7_cabinet.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 						Кабинет для занятий
@@ -590,7 +622,8 @@
 			</div>
 			<div class="bl">
 				<div class="bl1">
-					<img src="./images/advantages/a2_multifunctionality.png">
+					<img src="./images/advantages/a2_multifunctionality.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 						Многофункциональность
@@ -607,7 +640,8 @@
 						дальнейшей учебе в вузе.
 				</div>
 				<div class="bl1">
-					<img src="./images/advantages/a5_experience.png">
+					<img src="./images/advantages/a5_experience.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 				Опыт
@@ -635,7 +669,8 @@
 					</a>
 				</div>
 				<div class="bl1">
-					<img src="./images/advantages/a8_russian.png">
+					<img src="./images/advantages/a8_russian.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 						Математика, русский и белорусский языки в одной семье
@@ -654,7 +689,8 @@
 			</div>
 			<div class="bl">
 				<div class="bl1">
-					<img src="./images/advantages/a3_training_organization.png">
+					<img src="./images/advantages/a3_training_organization.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 					Организация занятий
@@ -675,7 +711,8 @@
 					знаний за отведенное время.
 				</div>
 				<div class="bl1">
-					<img src="./images/advantages/a6_direct_communication.png">
+					<img src="./images/advantages/a6_direct_communication.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 					Прямое общение с преподавателем
@@ -692,6 +729,7 @@
 					уникальными авторскими
 					методиками 
 						<img src="./images/advantages/smile.png"
+							alt="tech"
 							style="vertical-align: middle; width: 23px;"> ,
 							не затеряетесь в
 					большой группе учеников с 
@@ -699,7 +737,8 @@
 					и не прочтете вымышленных отзывов.
 				</div>
 				<div class="bl1">
-					<img src="./images/advantages/a9_location.png">
+					<img src="./images/advantages/a9_location.png"
+						alt="tech">
 				</div>
 				<div class="bl2">
 					Местоположение
@@ -716,7 +755,8 @@
 	<div class="clear"></div>
 	<div class="s1">
 		<div class="prem">
-			<img src="./images/advantages/a1_professionalism.png">
+			<img src="./images/advantages/a1_professionalism.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Профессионализм</span><br>
@@ -727,12 +767,14 @@
 			<div class="clear"></div>
 			<div class="ph1">
 				<img src="./images/advantages/3535-29.png" 
+					alt="tech"
 					style="padding-left:60px;width: 50px;">
 			</div>
 		</div>
 		<div class="clear"></div>
 		<div class="prem">
-			<img src="./images/advantages/a4_technologies.png">
+			<img src="./images/advantages/a4_technologies.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Сочетание различных подходов, технологий и экспромта</span><br>
@@ -746,7 +788,8 @@
 	</div>
 	<div class="s1">
 		<div class="prem">
-			<img src="./images/advantages/a2_multifunctionality.png">
+			<img src="./images/advantages/a2_multifunctionality.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Многофункциональность</span><br>
@@ -758,14 +801,17 @@
 		</div>
 		<div class="clear"></div>
 		<div class="str1">
-			<img src="./images/advantages/3535-30.png">
+			<img src="./images/advantages/3535-30.png"
+				alt="tech">
 		</div>
 		<div class="str2">
-			<img src="./images/advantages/3535-31.png">
+			<img src="./images/advantages/3535-31.png"
+				alt="tech">
 		</div>
 		<div class="clear"></div>
 		<div class="prem">
-			<img src="./images/advantages/a5_experience.png">
+			<img src="./images/advantages/a5_experience.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Опыт</span><br>
@@ -788,7 +834,8 @@
 		</div>
 		<div class="clear"></div>
 		<div class="prem">
-			<img src="./images/advantages/a8_russian.png">
+			<img src="./images/advantages/a8_russian.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Математика, русский и белорусский языки в одной семье</span><br>
@@ -810,7 +857,8 @@
 	</div>
 	<div class="s1">
 		<div class="prem">
-			<img src="./images/advantages/a3_training_organization.png">
+			<img src="./images/advantages/a3_training_organization.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Организация занятий</span><br>
@@ -823,7 +871,8 @@
 		</div>
 		<div class="clear"></div>
 		<div class="prem">
-			<img src="./images/advantages/a7_cabinet.png">
+			<img src="./images/advantages/a7_cabinet.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Кабинет для занятий</span><br>
@@ -843,7 +892,8 @@
 		</div>
 		<div class="clear"></div>
 		<div class="prem">
-			<img src="./images/advantages/a6_direct_communication.png">
+			<img src="./images/advantages/a6_direct_communication.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Прямое общение с преподавателем</span><br>
@@ -852,13 +902,15 @@
 				и прочих лиц, чья основная цель – извлечение прибыли. Здесь Вы не найдете «опытных профессионалов»
 				с опытом работы от 0 лет и уникальными авторскими методиками,
 				<img src="./images/advantages/smile.png" 
+					alt="tech"
 					style="vertical-align: middle; width: 20px;"> 
 				не затеряетесь в большой группе учеников с самыми разными способностями и не прочтете вымышленных отзывов.
 			</span>
 		</div>
 		<div class="clear"></div>
 		<div class="prem">
-			<img src="./images/advantages/a9_location.png">
+			<img src="./images/advantages/a9_location.png"
+				alt="tech">
 		</div>
 		<div class="op">
 			<span class="s1g">Местоположение</span><br>
@@ -882,121 +934,152 @@
 		<p>
 			<a class="blink" href="https://mathematics-by.tam.by/otzyvy/" target="_blank">Отзывы на Tam.by</a>:<br>
 			<a class="imagelink" href="https://mathematics-by.tam.by/otzyvy/" target="_blank">
-				<img src="images/outlogo/tamby.png">
+				<img src="images/outlogo/tamby.png"
+					alt="tech">
 			</a>
 		</p>
 	</div>
 		<style> .no{width:100%}.no img{width:100%}</style>
 	<div class="no">
-		<img src="./images/cat/cat.gif">
+		<img src="./images/cat/cat.gif"
+			alt="tech">
 	</div>
 </div>
 <div id="footer">
 	<div class="fot">
 		<div class="glf">
 			<div class="glf1">
-				<img src="./images/advantages/viber.png">
+				<img src="./images/advantages/viber.png"
+					alt="tech">
 					<a style="text-decoration: none;" 
 						href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/whatts.png">
+				<img src="./images/advantages/whatts.png"
+					alt="tech">
 					<a style="text-decoration: none;" 
 						href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/skype.png">
+				<img src="./images/advantages/skype.png"
+					alt="tech">
 					<a href="skype:xoziain_777?chat”">(по запросу)</a>
 			</div>
 			<div class="glf2">
-			<img src="./images/advantages/mtts.png">
+			<img src="./images/advantages/mtts.png"
+				alt="tech">
 				<a style="text-decoration: none;" 
 					href="tel:+375298515251">+375(29)851-52-51</a><br>
-			<img src="./images/advantages/velccom.png">
+			<img src="./images/advantages/velccom.png"
+				alt="tech">
 				<a style="text-decoration: none;"
 					href="tel:+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf3">
-				<img src="./images/advantages/posts.png">
+				<img src="./images/advantages/posts.png"
+					alt="tech">
 					<a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
-				<img src="./images/advantages/calls.png">
+				<img src="./images/advantages/calls.png"
+					alt="tech">
 					<a style="text-decoration: none;"
 						href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
 			<div class="glf4">
-				<img src="./images/advantages/maps.png">
+				<img src="./images/advantages/maps.png"
+					alt="tech">
 					<a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-				<img src="./images/advantages/metro.png">
+				<img src="./images/advantages/metro.png"
+					alt="tech">
 				<a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a>
 			</div>
 			<div class="glf5">
-				<img src="./images/cat/cat1.png">
+				<img src="./images/cat/cat1.png"
+					alt="tech">
 			</div>
 			<div class="clear"></div>
 		</div>
 		<div class="glf0">
 			<div class="glf2">
-				<img src="./images/advantages/mtts.png">
+				<img src="./images/advantages/mtts.png"
+					alt="tech">
 					<a style="text-decoration: none;" 
 						href="tel:+375298515251">+375(29)851-52-51</a><br>
-				<img src="./images/advantages/velccom.png">
+				<img src="./images/advantages/velccom.png"
+					alt="tech">
 					<a style="text-decoration: none;"
 						href="tel:+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf1">
-				<img src="./images/advantages/whatts.png">
+				<img src="./images/advantages/whatts.png"
+					alt="tech">
 					<a style="text-decoration: none;"
 						href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/viber.png">
+				<img src="./images/advantages/viber.png"
+					alt="tech">
 					<a style="text-decoration: none;" 
 						href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/skype.png">
+				<img src="./images/advantages/skype.png"
+					alt="tech">
 					<a href="skype:xoziain_777?chat”">(по запросу)</a>
 			</div>
 			<div class="glf3">
-				<img src="./images/advantages/calls.png">
+				<img src="./images/advantages/calls.png"
+					alt="tech">
 					<a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a><br>
-				<img src="./images/advantages/posts.png">
+				<img src="./images/advantages/posts.png"
+					alt="tech">
 					<a href="mailto:info@mathematics.by">info@mathematics.by</a>
 			</div>
 			<div class="glf4">
-				<img src="./images/advantages/maps.png">
+				<img src="./images/advantages/maps.png"
+					alt="tech">
 					<a href="mestopolozhenie.html#karta1">Проспект Дзержинского, 131</a><br>
-				<img src="./images/advantages/metro.png">
+				<img src="./images/advantages/metro.png"
+					alt="tech">
 					<a href="mestopolozhenie.html#karta1">(ст.м. Малиновка)</a>
 			</div>
 			<div class="glf5">
-				<img src="./images/cat/cat1.png">
+				<img src="./images/cat/cat1.png"
+					alt="tech">
 			</div>
 			<div class="clear"></div>
 		</div>
 		<div class="glf9">
 			<div class="glf1">
-				<img src="./images/advantages/viber.png">
+				<img src="./images/advantages/viber.png"
+					alt="tech">
 					<a style="text-decoration: none;" 
 						href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/whatts.png">
+				<img src="./images/advantages/whatts.png"
+					alt="tech">
 					<a style="text-decoration: none;" 
 						href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/skype.png">
+				<img src="./images/advantages/skype.png"
+					alt="tech">
 					<a href="skype:xoziain_777?chat”">(по запросу)</a>
 			</div>
 			<div class="glf2">
-				<img src="./images/advantages/mtts.png">
+				<img src="./images/advantages/mtts.png"
+					alt="tech">
 					<a style="text-decoration: none;" 
 						href="tel:+375298515251">+375(29)851-52-51
 					</a><br>
-				<img src="./images/advantages/velccom.png">
+				<img src="./images/advantages/velccom.png"
+					alt="tech">
 					<a style="text-decoration: none;"
 						href="tel:+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf3">
-				<img src="./images/advantages/posts.png">
+				<img src="./images/advantages/posts.png"
+					alt="tech">
 					<a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
-				<img src="./images/advantages/calls.png">
+				<img src="./images/advantages/calls.png"
+					alt="tech">
 					<a style="text-decoration: none;" 
 						href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
 			<div class="glf4">
-				<img src="./images/advantages/maps.png">
+				<img src="./images/advantages/maps.png"
+					alt="tech">
 					<a href="mestopolozhenie.html#karta">Проспект Дзержинского, 131</a><br>
-				<img src="./images/advantages/metro.png">
+				<img src="./images/advantages/metro.png"
+					alt="tech">
 					<a href="mestopolozhenie.html#karta">(ст.м. Малиновка)</a>
 			</div>
 			<div class="clear"></div>
