M-10 added atribute lang="ru" at the html start tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html lang="ru">
+	<head >
 		<title>
 			Репетитор по математике Минск. Подготовка к ЦТ
 		</title>
