--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
 
 
 <!--LiveInternet counter-->
-<script type="text/javascript">
+<script>
 	document.write("<a href='//www.liveinternet.ru/click' "+
 	"target=_blank><img src='//counter.yadro.ru/hit?t22.11;r"+
 	escape(document.referrer)+((typeof(screen)=="undefined")?"":
@@ -1020,7 +1020,7 @@
 
 
 <span id="top100_widget"></span>
-<script type="text/javascript">
+<script>
 	var _tmr=window._tmr || (window._tmr = []);_tmr.push({id: "2925695", type: "pageView", start: (new Date()).getTime()});(function (d,w,id) {if(d.getElementById(id)) return;var ts=d.createElement("script");ts.type = "text/javascript";ts.async=true;ts.id=id;ts.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//top-fwz1.mail.ru/js/code.js";var f=function(){var s=d.getElementsByTagName("script")[0];s.parentNode.insertBefore(ts,s);};if(w.opera == "[object Opera]"){d.addEventListener("DOMContentLoaded", f, false);}else{f();}})(document, window, "topmailru-code");
 </script><noscript><div><img src="//top-fwz1.mail.ru/counter?id=2925695;js=na" style="border:0;position:absolute;left:-9999px;" alt="" /></div></noscript><script>
 (function (w,d,c) {(w[c] = w[c] || []).push(function(){var options = {project: 4503897,
@@ -1036,7 +1036,7 @@ s.type = "text/javascript";s.async=true;s.src =
 	</div>
 	<div class="clear"></div>
 </div>
-<script src="scripts/yandex_metrika_counter.js" type="text/javascript">
+<script src="scripts/yandex_metrika_counter.js">
 </script>
 <noscript>
 <div>
