--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta content="репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии" name="keywords">
 		<meta content="af875abcb7bc85a1" name="yandex-verification">
 		<link href="style.css" rel="stylesheet" type="text/css">
-		<link REL="SHORTCUT ICON" HREF="http://mathematics.by/favicon.ico">
+		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
 			p.imaged {
 				background-repeat:no-repeat
