M-39 Изменина фотография и сделана кликабельной со ссылкой на youtube

--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
 			</div>
 			<p></p> 
 			<div class="ck"> 
-				<img alt="Репетитор по математике в Минске"
+				<a href="https://youtu.be/n_nD7EeA1Wc"><img alt="Репетитор по математике в Минске"
 					class="image1" 
 					src="images/photo/mathematics_tutor.jpg" 
-					title="Репетитор по математике в Минске">
+					title="Репетитор по математике в Минске"></a>
 				<img alt="Занятия по математике в группах"
 					class="image" 
 					src="images/photo/tutor.jpg" 
