M-39 Видео должно открываться в новой вкладке

--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
 			</div>
 			<p></p> 
 			<div class="ck"> 
-				<a href="https://youtu.be/n_nD7EeA1Wc"><img alt="Репетитор по математике в Минске"
-					class="image1" 
+				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank"><img alt="Репетитор по математике в Минске"
+					class="image1"  
 					src="images/photo/mathematics_tutor.jpg" 
 					title="Репетитор по математике в Минске"></a>
 				<img alt="Занятия по математике в группах"
