--- a/mestopolozhenie.html
+++ b/mestopolozhenie.html
@@ -10,22 +10,22 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<link REL="SHORTCUT ICON" HREF="http://mathematics.by/favicon.ico">
 	<style>
-	                /* .imaged{
+	                 .imaged{
 	                     padding-left: 90px;
-	                 }*/
+	                 }
 	                 p.imaged{
 	                     background-repeat: no-repeat;
 	                 }
 
 	                 p.imagedDigit{
-	                     /*padding-top: 12px;*/
+	                     padding-top: 12px;
 	                     background-size: 96px;
-	                     /*padding-bottom: 12px;*/
+	                     padding-bottom: 12px;
 	                 }
 	                 p.imagedAdvance{
-	                     /*padding-top: 12px;*/
+	                     padding-top: 12px;
 	                     background-size: 96px;
-	                     /*padding-bottom: 36px;*/
+	                     padding-bottom: 36px;
 	                 }
 
 	                 /* phone screen */
@@ -117,6 +117,162 @@
 	                 #a9_location{
 	                     background-image: url(images/advantages/a9_location.png);
 	                 }
+	</style>
+
+	<style>
+		.block1 {
+			float:left;
+			margin-left:24%;
+			margin-bottom:2%;
+			margin-top:2%;
+		}
+
+		.block1 img {
+			width:50%;
+		}
+
+		.block2 {
+			float:left;
+			font-family:akrobat-bold;
+			color:rgb(255, 90, 90);
+			font-size:40px;
+			padding-top:4%;
+			margin-left:-5%;
+		}
+
+		.block3 {
+			float:left;
+			margin-left:20%;
+			margin-bottom:-1%;
+		}
+
+		.block3 img {
+			width:50%;
+		}
+
+		.kark {
+			display:none;
+		}
+
+		.containerp {
+			width:100%;
+			text-align:center;
+		}
+
+		.text1 img {
+			width:3%;
+			vertical-align:middle;
+		}
+
+		.text1 {
+			font-family:akrobat-regular;
+			color:rgb(39, 43, 47);
+			width:100%;
+			font-size:22px;
+		}
+
+		.bitots1 {
+			margin-top:-1%;
+		}
+
+		.bitots {
+			margin-top:2%;
+		}
+
+		.telefon2 a {
+			color:rgb(39, 43, 47);
+			font-family:akrobat-regular;
+			text-decoration:none;
+		}
+
+		.telefon2 {
+			width:48%;
+			display:inline-block;
+			text-align:left;
+			margin-left:2%;
+		}
+
+		.telefon2 img {
+			vertical-align:middle;
+			width:15%;
+		}
+
+		@media screen and (min-width:1800px) {
+
+			.block3 img {
+				height:108px;
+			}
+			 
+			.block3 {
+				margin-left:29%;
+			}
+
+			.block1 {
+				margin-left:32%;
+			}
+
+			.block2 {
+				margin-left:-2%;
+				font-size:55px;
+				margin-top:-1%;
+			}
+
+			.text1 {
+				font-size:28px;
+			}
+
+			.bitots {
+				margin-top:1%;
+			}
+
+		}
+			@media screen and (max-width:800px) {
+
+				.block3 {
+					display:none;
+				}
+
+				.block2 {
+					margin-left:0;
+					margin-bottom:0;
+					margin-top:0;
+					float:none;
+					padding-top:0;
+				}
+
+				.block1 {
+					margin-left:0;
+					margin-top:0;
+					margin-bottom:0;
+					float:none;
+				}
+
+				.block1 img {
+					width:16%;
+				}
+
+				.kark img {
+					width:100%;
+				}
+
+				.kark {
+					display:block;
+				}
+
+				.text1 img {
+					width:5%;
+				}
+
+				.text1 {
+					padding-left:2%;
+				}
+
+				.telefon2 {
+					width:100%;
+					text-align:center;
+					margin-left:0;
+				}
+			}
 	</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1"></script>
