M-45 added missing end tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
 		<meta name="keywords" content="репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
-		<link href="style.css" rel="stylesheet" type="text/css"
+		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
 		</style>
