M-70 deleted link in body element at index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		</script>
 
 </head>
-	<body link="#000066">
+	<body>
 		<div class="container">
 			<div class="g1">
 				<img src="images/background/logo.png"
