M-81 добавлены ссылки с фото на сертификаты на главной странице

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
+	<head >
 		<title>
 			Репетитор по математике Минск. Подготовка к ЦТ
 		</title>
@@ -311,7 +311,7 @@
 		</div>
 		
 		<div class="main">
-			<h2 class="main">
+					<h2 class="main">
 				<span class="h11">Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
 		Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи
 				</span>
@@ -339,13 +339,20 @@
 			<div class="ck"> 
 				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank"><img alt="Репетитор по математике в Минске"
 					class="image1"  
-					src="images/photo/mathematics_tutor.jpg" 
+					src="images\photo\mathematics_tutor.jpg" 
 					title="Репетитор по математике в Минске"></a>
 				<img alt="Занятия по математике в группах"
 					class="image" 
-					src="images/photo/tutor.jpg" 
-					title="Занятия по математике в группах">
+					src="images\photo\tutor.jpg"
+					title="Занятия по математике в группах"
+					usemap="#Navigation">
 			</div>
+			<map name="Navigation">
+				<area shape="poly" coords="129,31,134,22,135,12,143,8,249,7,258,13,257,22,250,28,144,28,138,26" href="https://mathematics-by.tam.by/otzyvy/" alt="Отзыв на tut.by">
+				<area shape="poly" coords="308,62,302,52,302,44,294,39,173,39,166,45,165,52,173,58,294,58,297,56" href="images\certificates\certificate100points.jpg" alt="Ссылка на сертификат">
+				<area shape="poly" coords="157,97,162,89,160,77,168,72,284,72,292,77,293,86,285,92,167,92" href="images\certificates\certificate96points.jpg" alt="Ссылка на сертификат">
+				<area shape="poly" coords="362,117,351,121,234,121,227,126,227,135,235,141,252,141,359,135,359,126" href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5.+%D0%9F%D0%BE%D0%B4%D0%B3%D0%BE%D1%82%D0%BE%D0%B2%D0%BA%D0%B0+%D0%BA+%D0%A6%D0%A2+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5./@53.8442081,27.4728719,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1" alt="Ссылка">
+			</map> <br>
 			<h2 class="main"> 
 				<span class="h21">Основные направления деятельности:</span>
 			</h2>
