M-93. Removed http://mathematics.by/ prefix from href attribute of favico reference, made by this path relative, not absolute.

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	
 	<meta content="af875abcb7bc85a1" name="yandex-verification">
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<link REL="SHORTCUT ICON" HREF="http://mathematics.by/favicon.ico">
+	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 	<style>
 	                /* .imaged{
 	                     padding-left: 90px;
