--- a/mestopolozhenie.html
+++ b/mestopolozhenie.html
@@ -8,7 +8,7 @@
 	<meta content="репетитор минск малиновка, репетитор минск московский район, репетитор по математике минск малиновка, репетитор по математике минск  московский район, репетитор по математике минск  юго-запад, репетитор по математике брилевичи, репетитор по математике малиновка, репетитор по математике московский район, репетитор по математике юго-запад" name="keywords">
 	<meta content="af875abcb7bc85a1" name="yandex-verification">
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<link REL="SHORTCUT ICON" HREF="http://mathematics.by/favicon.ico">
+	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 	<style>
 	                /* .imaged{
 	                     padding-left: 90px;
