--- a/texraboti.html
+++ b/texraboti.html
@@ -5,7 +5,7 @@
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="af875abcb7bc85a1" name="yandex-verification">
-	<link REL="SHORTCUT ICON" HREF="http://mathematics.by/favicon.ico">
+	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 </head>
 <style>
 	.p1{
