--- a/otzivi.html
+++ b/otzivi.html
@@ -8,7 +8,7 @@
 	<meta content="репетитор по математике, репетитор по математике Минск, репетиторы отзывы, хорошие отзывы о репетиторе, отзывы о репетиторах по математике, хороший репетитор, хороший репетитор по математике, лучший сайт репетиторов, как найти хорошего репетитора, самые лучшие репетиторы, репетитор по высшей математике Минск" name="keywords">
 	<meta content="af875abcb7bc85a1" name="yandex-verification">
 	<link href="style.css" rel="stylesheet" type="text/css">
-	<link REL="SHORTCUT ICON" HREF="http://mathematics.by/favicon.ico">
+	<link REL="SHORTCUT ICON" HREF="favicon.ico">
 	<style>
 	             /* .imaged{
 	                  padding-left: 90px;
