M-27. Changed content of about-new page from about page

--- a/about-new.html
+++ b/about-new.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике Минск. ИЗМЕНИТЬ
+			Репетитор математики в Минске Игнатьев Игорь Викторович
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="ИЗМЕНИТЬ Репетитор по математике в Минске для школьников проводит подготовку к ЦТ и дополнительные  занятия по алгебре и геометрии: 5,6,7,8,9,10,11 класс. Репетитор по высшей математике для студентов Минск – преподаватель со стажем более 20 лет, кандидат физико-математических наук.">
-		<meta name="keywords" content="ИЗМЕНИТЬ репетитор, репетитор по математике, репетитор математика, репетитор математики, подготовка по математике, ЦТ подготовка, ЦТ математика, подготовка по математике к ЦТ, репетитор класс, репетитор по высшей математике, репетитор Минск, репетитор по математике в Минске, репетитор по алгебре, репетитор по геометрии">
+		<meta name="description" content="Хороший репетитор по математике в Минске. Высшая математика. Преподаватель проводит подготовку школьников, абитуриентов и студентов более 20 лет. Много положительных отзывов учеников">
+		<meta name="keywords" content="образование, преподаватель">
 		<meta name="yandex-verification" content="af875abcb7bc85a1">
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
@@ -30,10 +30,9 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>Обо мне</h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				информация о преподавателе
 			</span>
 			</div>
 			<div class="g3">
@@ -300,12 +299,6 @@
 		</div>
 		
 		<div class="main">
-			<h2 class="main">
-				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
-				</span>
-			</h2>
 
 			<div class="right1">
 				<span class="skr">
@@ -314,25 +307,24 @@
 			</div>
 
 			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
+				<span class="h21">Обо мне</span>
 			</h2>
 
 			<div id="realmain" class="zgt">
 				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
+					1. Два высших образования БГУ (математическое и экономическое), кандидат физико-математических наук, многолетний опыт работы (с 1996 года) в гимназии (классы с базовым, повышенным и углубленным обучением, победители районных и городских олимпиад), в ВУЗе (подготовительные курсы, высшая математика, ТВ и МС, математическое программирование) и, конечно, в частных занятиях.
 				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
 				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
+					2. Уникальная база материалов ЦТ всех лет, вступительных экзаменов в различные вузы и колледжи Республики Беларусь, владение нюансами школьной программы базовой и старшей школы на любом уровне изучения предмета, обширная база олимпиадных задач, полное владение программой курса высшей математики (все разделы), ТВ и МС, математического программирования в любом ВУЗе Республики Беларусь дают стабильно хорошие и отличные результаты.
+				</p>
+				<p class="zgt">
+					3. Игнатьев Игорь Викторович
+				</p>
+				<p class="zgt">
+					4. Работа ведется на законных основаниях с уплатой единого налога в Инспекции МНС.
+				</p>
+				<p class="zgt">
+					5. За время моей работы, я подготовил к сессии множество студентов, как очной, так и заочной формы обучения. С моей помощью получило необходимые и достаточные для поступления знания большое количество абитуриентов. Средний балл, полученный ими при сдаче ЦТ ежегодно разительно превосходит общий средний балл по республике. Наиболее одаренные дети преодолевают планку в 90 баллов, не единожды достигался 100 бальный результат. Моя цель -  вывести ученика на максимально возможный уровень. Необходимо понимать, что одного ученика может быть проще подготовить на 90 баллов, чем другого на 50. Способности детей очень разнятся. Очень важным фактором также является трудолюбие и целеустремленность ученика.
 				</p>
 			</div>
 
