Transferred menu from JS file

--- a/site_map.html
+++ b/site_map.html
@@ -318,21 +318,51 @@
 			</h2>
 
 			<div id="realmain" class="zgt">
+				<h1>Карта сайта</h1>
+					<p class="zgt">
+						<a href="index.html">Главная</a>
+					</p>
+
+					<h2>Студентам</h2>
+						<p class="zgt">
+							<a href="podgotovka_k_ekzamenu.html">Подготовка к экзамену</a><br>
+							<a href="pomosch_reshenii_zadach.html">Консультации и дистанционная помощь в решении задач</a>
+						</p>
+						<h3>Помощь в решении контрольных и курсовых работ</h3>
+							<h4>Математика</h4>
+								<p class="zgt">
+									<a href="uslovia_i_ceny.html">Условия и цены</a>
+								</p>
+								<h5>Примеры решения задач</h5>
+									<p class="zgt">
+										<a href="pdf/8a.pdf">Линейная алгебра, аналитическая геометрия, пределы, производная</a><br>
+										<a href="pdf/8b.pdf">ФНП, интегралы, дифференциальные уравнения</a><br>
+										<a href="pdf/8c.pdf">Двойные, тройные, криволинейные интегралы, элеметы теории поля, ряды</a><br>
+										<a href="pdf/8d.pdf">ТВиМС, математическое программирование</a><br>
+										<a href="pdf/8e.pdf">ЭММ</a>
+									</p>
+							<h4>Информатика и программирование</h4>
+								<p class="zgt">
+									<a href="pdf/9.pdf">Примеры решения задач</a>
+								</p>
+					<h2>Абитуриентам</h2>
+						<p class="zgt">
+							<a href="uslovia_i_ceny2.html">Условия и цены</a><br>
+							<a href="metodika_prepodavania.html">Методика преподавания и результаты ЦТ</a>
+						</p>
+						<h3>примеры ЦТ (Проверь себя)</h3>
+							<p class="zgt">
+								<a href="pdf/3.pdf">Тест 1 (Легкий)</a><br>
+								<a href="pdf/4.pdf">Тест 2 (Средний)</a><br>
+								<a href="pdf/5.pdf">Тест 3 (Продвинутый)</a><br>
+								<a href="pdf/6.pdf">Ответы к тестам</a><br>
+							</p>
 				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
-				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
-				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
+					<a href="shkolnikam.html">Школьникам</a><br>
+					<a href="about.html">Обо мне</a><br>
+					<a href="cabinet.html">Рабочий кабинет</a><br>
+					<a href="mestopolozhenie.html">Контактная информация</a><br>
+					<a href="mestopolozhenie.html">Местоположение</a>
 				</p>
 			</div>
 
