--- a/site_map.html
+++ b/site_map.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<title>
-			Репетитор по математике Минск. ИЗМЕНИТЬ
+			Репетитор по математике Минск. Карта сайта.
 		</title>
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,9 @@
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<link REL="SHORTCUT ICON" HREF="favicon.ico">
 		<style>
+			.mainleft {
+				text-align: left;
+			}
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1">
@@ -30,10 +33,9 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>Репетитор по математике в Минске.</h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				Карта сайта.
 			</span>
 			</div>
 			<div class="g3">
@@ -300,30 +302,13 @@
 		</div>
 		
 		<div class="main">
-			<h2 class="main">
-				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
-				</span>
-			</h2>
-
-			<div class="right1">
-				<span class="skr">
-					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
-				</span>
-			</div>
-
-			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
-			</h2>
-
 			<div id="realmain" class="zgt">
 				<h1>Карта сайта</h1>
 					<p class="zgt">
 						<a href="index.html">Главная</a>
 					</p>
 
-					<h2>Студентам</h2>
+					<h2 class="mainleft">Студентам</h2>
 						<p class="zgt">
 							<a href="podgotovka_k_ekzamenu.html">Подготовка к экзамену</a><br>
 							<a href="pomosch_reshenii_zadach.html">Консультации и дистанционная помощь в решении задач</a>
@@ -345,7 +330,7 @@
 								<p class="zgt">
 									<a href="pdf/9.pdf">Примеры решения задач</a>
 								</p>
-					<h2>Абитуриентам</h2>
+					<h2 class="mainleft">Абитуриентам</h2>
 						<p class="zgt">
 							<a href="uslovia_i_ceny2.html">Условия и цены</a><br>
 							<a href="metodika_prepodavania.html">Методика преподавания и результаты ЦТ</a>
