Добавлены разделы 'Общая информация' и 'Школьникам'

--- a/site_map.html
+++ b/site_map.html
@@ -304,8 +304,18 @@
 		<div class="main">
 			<div id="realmain" class="zgt">
 				<h1>Карта сайта</h1>
+					<h2 class="mainleft">Общая информация</h2>
 					<p class="zgt">
-						<a href="index.html">Главная</a>
+						<a href="index.html">Главная</a><br>
+						<a href="mestopolozhenie.html">Контактная информация и местоположение</a><br>
+						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
+						<a href="about.html">Обо мне</a><br>
+						<a href="cabinet.html">Рабочий кабинет</a><br>
+					</p>
+
+					<h2 class="mainleft">Школьникам</h2>
+					<p class="zgt">
+						<a href="shkolnikam.html">Школьникам</a>
 					</p>
 
 					<h2 class="mainleft">Студентам</h2>
@@ -342,13 +352,6 @@
 								<a href="pdf/5.pdf">Тест 3 (Продвинутый)</a><br>
 								<a href="pdf/6.pdf">Ответы к тестам</a><br>
 							</p>
-				<p class="zgt">
-					<a href="shkolnikam.html">Школьникам</a><br>
-					<a href="about.html">Обо мне</a><br>
-					<a href="cabinet.html">Рабочий кабинет</a><br>
-					<a href="mestopolozhenie.html">Контактная информация</a><br>
-					<a href="mestopolozhenie.html">Местоположение</a>
-				</p>
 			</div>
 
 			<div class="right1">
