Добавлена стилизация ссылок

--- a/site_map.html
+++ b/site_map.html
@@ -306,52 +306,52 @@
 				<h1>Карта сайта</h1>
 					<h2 class="mainleft">Общая информация</h2>
 					<p class="zgt">
-						<a href="index.html">Главная</a><br>
-						<a href="mestopolozhenie.html">Контактная информация и местоположение</a><br>
+						<a class="blink" href="index.html">Главная</a><br>
+						<a class="blink" href="mestopolozhenie.html">Контактная информация и местоположение</a><br>
 						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
-						<a href="about.html">Обо мне</a><br>
-						<a href="cabinet.html">Рабочий кабинет</a><br>
+						<a class="blink" href="about.html">Обо мне</a><br>
+						<a class="blink" href="cabinet.html">Рабочий кабинет</a><br>
 					</p>
 
 					<h2 class="mainleft">Школьникам</h2>
 					<p class="zgt">
-						<a href="shkolnikam.html">Школьникам</a>
+						<a class="blink" href="shkolnikam.html">Школьникам</a>
 					</p>
 
 					<h2 class="mainleft">Абитуриентам</h2>
 						<p class="zgt">
-							<a href="uslovia_i_ceny2.html">Условия и цены</a><br>
-							<a href="metodika_prepodavania.html">Методика преподавания и результаты ЦТ</a>
+							<a class="blink" href="uslovia_i_ceny2.html">Условия и цены</a><br>
+							<a class="blink" href="metodika_prepodavania.html">Методика преподавания и результаты ЦТ</a>
 						</p>
 						<h3>примеры ЦТ (Проверь себя)</h3>
 							<p class="zgt">
-								<a href="pdf/3.pdf">Тест 1 (Легкий)</a><br>
-								<a href="pdf/4.pdf">Тест 2 (Средний)</a><br>
-								<a href="pdf/5.pdf">Тест 3 (Продвинутый)</a><br>
-								<a href="pdf/6.pdf">Ответы к тестам</a><br>
+								<a class="blink" href="pdf/3.pdf">Тест 1 (Легкий)</a><br>
+								<a class="blink" href="pdf/4.pdf">Тест 2 (Средний)</a><br>
+								<a class="blink" href="pdf/5.pdf">Тест 3 (Продвинутый)</a><br>
+								<a class="blink" href="pdf/6.pdf">Ответы к тестам</a><br>
 							</p>
 
 					<h2 class="mainleft">Студентам</h2>
 						<p class="zgt">
-							<a href="podgotovka_k_ekzamenu.html">Подготовка к экзамену</a><br>
-							<a href="pomosch_reshenii_zadach.html">Консультации и дистанционная помощь в решении задач</a>
+							<a class="blink" href="podgotovka_k_ekzamenu.html">Подготовка к экзамену</a><br>
+							<a class="blink" href="pomosch_reshenii_zadach.html">Консультации и дистанционная помощь в решении задач</a>
 						</p>
 						<h3>Помощь в решении контрольных и курсовых работ</h3>
 							<h4>Математика</h4>
 								<p class="zgt">
-									<a href="uslovia_i_ceny.html">Условия и цены</a>
+									<a class="blink" href="uslovia_i_ceny.html">Условия и цены</a>
 								</p>
 								<h5>Примеры решения задач</h5>
 									<p class="zgt">
-										<a href="pdf/8a.pdf">Линейная алгебра, аналитическая геометрия, пределы, производная</a><br>
-										<a href="pdf/8b.pdf">ФНП, интегралы, дифференциальные уравнения</a><br>
-										<a href="pdf/8c.pdf">Двойные, тройные, криволинейные интегралы, элеметы теории поля, ряды</a><br>
-										<a href="pdf/8d.pdf">ТВиМС, математическое программирование</a><br>
-										<a href="pdf/8e.pdf">ЭММ</a>
+										<a class="blink" href="pdf/8a.pdf">Линейная алгебра, аналитическая геометрия, пределы, производная</a><br>
+										<a class="blink" href="pdf/8b.pdf">ФНП, интегралы, дифференциальные уравнения</a><br>
+										<a class="blink" href="pdf/8c.pdf">Двойные, тройные, криволинейные интегралы, элеметы теории поля, ряды</a><br>
+										<a class="blink" href="pdf/8d.pdf">ТВиМС, математическое программирование</a><br>
+										<a class="blink" href="pdf/8e.pdf">ЭММ</a>
 									</p>
 							<h4>Информатика и программирование</h4>
 								<p class="zgt">
-									<a href="pdf/9.pdf">Примеры решения задач</a>
+									<a class="blink" href="pdf/9.pdf">Примеры решения задач</a>
 								</p>
 			</div>
 
