--- a/site_map.html
+++ b/site_map.html
@@ -14,6 +14,7 @@
 		<style>
 			.mainleft {
 				text-align: left;
+				color: dimgray;
 			}
 		</style>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -337,11 +338,11 @@
 							<a class="blink" href="pomosch_reshenii_zadach.html">Консультации и дистанционная помощь в решении задач</a>
 						</p>
 						<h3>Помощь в решении контрольных и курсовых работ</h3>
-							<h4>Математика</h4>
+							<h4 class="mainleft">Математика</h4>
 								<p class="zgt">
 									<a class="blink" href="uslovia_i_ceny.html">Условия и цены</a>
 								</p>
-								<h5>Примеры решения задач</h5>
+								<h5 class="mainleft">Примеры решения задач</h5>
 									<p class="zgt">
 										<a class="blink" href="pdf/8a.pdf">Линейная алгебра, аналитическая геометрия, пределы, производная</a><br>
 										<a class="blink" href="pdf/8b.pdf">ФНП, интегралы, дифференциальные уравнения</a><br>
@@ -349,7 +350,7 @@
 										<a class="blink" href="pdf/8d.pdf">ТВиМС, математическое программирование</a><br>
 										<a class="blink" href="pdf/8e.pdf">ЭММ</a>
 									</p>
-							<h4>Информатика и программирование</h4>
+							<h4 class="mainleft">Информатика и программирование</h4>
 								<p class="zgt">
 									<a class="blink" href="pdf/9.pdf">Примеры решения задач</a>
 								</p>
