Добавлены ссылка на страницу и картинка - пока только с главной страницы

--- a/index.html
+++ b/index.html
@@ -868,7 +868,8 @@
 				<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
 				<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
 			</div>
-			<div class="glf3">
+			<div class="glf3" style="margin-top:0%;">
+				<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 				<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
 				<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
@@ -893,7 +894,8 @@
 				<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
 				<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
 			</div>
-			<div class="glf3">
+			<div class="glf3" style="margin-top:0%;">
+				<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 				<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
 				<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
@@ -918,7 +920,8 @@
 				<img src="./images/advantages/velccom.png"> <a style="text-decoration: none;" href="tel:+375296575971">+375(29)657-59-71</a><br>
 				<img src="./images/advantages/skype.png"> <a href="skype:xoziain_777?chat”">(по запросу)</a> 
 			</div>
-			<div class="glf3">
+			<div class="glf3" style="margin-top:0%;">
+				<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
 				<img src="./images/advantages/posts.png"> <a href="mailto:info@mathematics.by">info@mathematics.by</a><br>
 				<img src="./images/advantages/calls.png"> <a style="text-decoration: none;" href="tel:+375172400021">+375(17)240-00-21</a>
 			</div>
